--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
-body {background-color: gray;
+html, body {
+    margin:0px;
+    height:100%;
+  }
+
+main {
+    background-color: lightgray;
+    height: 88%;
 }
 
-
-.top-bar {
+header {
     text-align: right;
     height: 5%;
     width: 100%;
@@ -11,19 +17,20 @@ body {background-color: gray;
     background-color: red;
 }
 
-.bottom-bar{
-    bottom: 5%;
-    width: 100%;
+footer{
+    background-color: brown;
+    margin: auto;
     text-align: left;
+    height: 12%;
 }
 
 .search {
     width: 50%;
     height: 50%;
-    margin: auto;
+    margin-top: 10%;
     background-color: blue;
     text-align: center;
-    padding: 20px;
-    top: 50%;
+    padding: 10%;
 }
+
 
